--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.20",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-hook-form": "^6.15.4",
     "react-router-dom": "^5.2.0",
     "web-vitals": "^1.1.0"
   },
