--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "clsx": "^1.1.1",
+    "dompurify": "^2.3.6",
     "history": "^4.10.1",
     "lodash": "^4.17.20",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hook-form": "^6.15.4",
     "react-router-dom": "^5.2.0",
+    "snowpack-plugin-raw-file-loader": "^1.0.9",
     "web-vitals": "^1.1.0"
   },
   "devDependencies": {
@@ -25,6 +27,7 @@
     "@snowpack/plugin-typescript": "^1.2.0",
     "@snowpack/web-test-runner-plugin": "^0.2.0",
     "@testing-library/react": "^11.0.0",
+    "@types/dompurify": "^2.3.3",
     "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
