--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
+  "homepage": "https://swiftinvention.github.io/www-swiftinvention-com",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "snowpack dev",
     "build": "snowpack build",
     "test": "web-test-runner \"src/**/*.test.tsx\"",
@@ -46,6 +49,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.2.3",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
     "postcss": "^8.2.4",
