--- a/package.json
+++ b/package.json
@@ -1,66 +1,67 @@
 {
   "homepage": "https://www.swiftinvention.com",
+  "type": "module",
   "scripts": {
     "predeploy": "npm run build && cp CNAME build/CNAME",
     "deploy": "gh-pages -d build",
-    "start": "snowpack dev",
-    "build": "snowpack build",
-    "test": "web-test-runner \"src/**/*.test.tsx\"",
+    "start": "vite --port 3000",
+    "build": "tsc && vite build",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix"
   },
   "dependencies": {
-    "clsx": "^1.1.1",
-    "dompurify": "^2.3.6",
-    "history": "^4.10.1",
+    "clsx": "^2.1.1",
+    "dompurify": "^3.1.5",
+    "history": "^5.3.0",
     "lodash": "^4.17.20",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-hook-form": "^6.15.4",
-    "react-router-dom": "^5.2.0",
-    "snowpack-plugin-raw-file-loader": "^1.0.9",
-    "web-vitals": "^1.1.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
+    "react-router-dom": "^6.23.1",
+    "web-vitals": "^4.1.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^3.1.3",
-    "@snowpack/plugin-dotenv": "^2.0.5",
-    "@snowpack/plugin-postcss": "^1.1.0",
-    "@snowpack/plugin-react-refresh": "^2.4.0",
-    "@snowpack/plugin-typescript": "^1.2.0",
-    "@snowpack/web-test-runner-plugin": "^0.2.0",
-    "@testing-library/react": "^11.0.0",
+    "@testing-library/react": "^16.0.0",
     "@types/dompurify": "^2.3.3",
     "@types/lodash": "^4.14.168",
-    "@types/react": "^17.0.1",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-helmet": "^6.1.0",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/snowpack-env": "^2.3.2",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@web/test-runner": "^0.12.0",
-    "cssnano": "^4.1.10",
-    "eslint": "^7.19.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.3",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "gh-pages": "^3.2.3",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.5.3",
-    "postcss": "^8.2.4",
-    "postcss-cli": "^8.3.1",
-    "postcss-import": "^14.0.0",
-    "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.2.1",
-    "rimraf": "^3.0.2",
-    "snowpack": "^3.0.1",
-    "tailwindcss": "^2.0.2",
-    "typescript": "^4.0.0"
+    "@types/node": "^18.18.2",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@types/react-helmet": "^6.1.11",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "cssnano": "^7.0.2",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^28.6.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "gh-pages": "^6.1.1",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.5",
+    "postcss": "^8.4.38",
+    "postcss-cli": "^11.0.0",
+    "postcss-import": "^16.1.0",
+    "postcss-preset-env": "^9.5.14",
+    "prettier": "^3.3.1",
+    "rimraf": "^5.0.7",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^4.0.0",
+    "unplugin-inject-preload": "^2.0.3",
+    "vite": "^5.2.0",
+    "vite-plugin-checker": "^0.6.4",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "husky": {
     "hooks": {
@@ -71,6 +72,6 @@
     "*.{ts,tsx}": "eslint --fix"
   },
   "volta": {
-    "node": "16.20.2"
+    "node": "18.18.2"
   }
 }
