--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,22 @@
 {
   "include": ["src", "types"],
+  "files": ["vite.config.ts", "tailwind.config.js", "postcss.config.js", "prettier.config.js"],
   "compilerOptions": {
     "module": "esnext",
     "target": "esnext",
     "moduleResolution": "node",
     "jsx": "preserve",
     "baseUrl": "./",
-    /* paths - import rewriting/resolving */
     "paths": {
-      // If you configured any Snowpack aliases, add them here.
-      // Add this line to get types for streaming imports (packageOptions.source="remote"):
-      //     "*": [".snowpack/types/*"]
-      // More info: https://www.snowpack.dev/guides/streaming-imports
       "~/*": ["./src/*"],
       "~/public/*": ["./public/*"]
     },
-    /* noEmit - Snowpack builds (emits) files, not tsc. */
     "noEmit": true,
-    /* Additional Options */
+    "allowJs": true,
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
-    "importsNotUsedAsValues": "error"
   }
 }
