--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "include": ["src", "types"],
-  "files": ["vite.config.ts", "tailwind.config.js", "postcss.config.js", "prettier.config.js"],
+  "files": ["vite.config.ts", "tailwind.config.ts"],
   "compilerOptions": {
     "module": "esnext",
     "target": "esnext",
@@ -12,7 +12,6 @@
       "~/public/*": ["./public/*"]
     },
     "noEmit": true,
-    "allowJs": true,
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
